--- a/app/src/main/res/layout/activity_become_store.xml
+++ b/app/src/main/res/layout/activity_become_store.xml
@@ -24,107 +24,184 @@
         <!-- The main content view -->
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#f5c59a">
 
             <RelativeLayout
                 android:id="@+id/content_frame"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp">
+                android:layout_height="wrap_content">
 
-                <TableLayout
+
+                <LinearLayout
                     android:id="@+id/tableLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="25dp"
+                    android:layout_marginStart="20dp"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:weightSum="1">
 
                         <TextView
                             android:id="@+id/E-mailTextView"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_alignEnd="@+id/passwordCheckTextView"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginStart="0dp"
+                            android:layout_marginTop="21dp"
+                            android:layout_weight="0"
                             android:gravity="center"
                             android:text="@string/email"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
-
-                        <EditText
-                            android:id="@+id/emailEditText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="45dp"
-                            android:layout_weight="2"
-                            android:ems="10"
-                            android:inputType="textEmailAddress" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/PasswordTextView"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignRight="@+id/passwordCheckTextView"
+                            android:layout_below="@+id/E-mailTextView"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginStart="0dp"
+                            android:layout_marginTop="15dp"
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="@string/password"
-                            android:textColor="@android:color/black"
+                            android:textAlignment="viewEnd"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
-
-                        <EditText
-                            android:id="@+id/passwordEditText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="45dp"
-                            android:layout_weight="2"
-                            android:ems="10"
-                            android:inputType="textPassword" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/passwordCheckTextView"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/PasswordTextView"
+                            android:layout_marginBottom="21dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginStart="0dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_weight="0"
                             android:gravity="center"
                             android:text="@string/passwordCheck"
-                            android:textColor="@android:color/black"
+                            android:textColor="#FFFFFF"
                             android:textSize="@dimen/font_size" />
 
-                        <EditText
-                            android:id="@+id/passwordCheckEditText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="45dp"
-                            android:layout_weight="2"
-                            android:ems="10"
-                            android:inputType="textPassword" />
-                    </TableRow>
+                    </RelativeLayout>
 
-                </TableLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:weightSum="3">
 
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
 
-                <Button
-                    android:id="@+id/storeLoginButton"
+                            <EditText
+                                android:id="@+id/emailEditText"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginBottom="11dp"
+                                android:layout_marginEnd="0dp"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="19dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/text_background"
+                                android:ems="10"
+                                android:inputType="textEmailAddress"
+                                android:paddingEnd="10dp"
+                                android:paddingStart="10dp" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
+
+                            <EditText
+                                android:id="@+id/passwordCheckEditText"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginBottom="15dp"
+                                android:layout_marginEnd="0dp"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="15dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/text_background"
+                                android:ems="10"
+                                android:inputType="textPassword"
+                                android:paddingEnd="10dp"
+                                android:paddingStart="10dp" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
+
+                            <EditText
+                                android:id="@+id/passwordEditText"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginBottom="19dp"
+                                android:layout_marginEnd="0dp"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="11dp"
+                                android:layout_weight="2"
+                                android:background="@drawable/text_background"
+                                android:ems="10"
+                                android:inputType="textPassword"
+                                android:paddingEnd="10dp"
+                                android:paddingStart="10dp" />
+                        </RelativeLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <ImageButton
+                    android:id="@+id/storeLoginButton1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
+                    android:layout_height="55dp"
                     android:layout_below="@+id/tableLayout"
-                    android:layout_weight="1"
-                    android:text="@string/haveStore" />
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="20dp"
+                    android:background="#00FFFFFF"
+                    android:paddingBottom="5dp"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
+                    android:paddingTop="5dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/store_available" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/notHaveStoreButton"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/storeLoginButton"
-                    android:text="@string/notHaveStore" />
+                    android:layout_height="53dp"
+                    android:layout_below="@+id/storeLoginButton1"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:background="#00FFFFFF"
+                    android:paddingBottom="5dp"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
+                    android:paddingTop="5dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/store_software" />
 
             </RelativeLayout>
         </ScrollView>
