--- a/app/src/main/res/layout/activity_store_login.xml
+++ b/app/src/main/res/layout/activity_store_login.xml
@@ -97,7 +97,7 @@
                             android:id="@+id/passwordEditText"
                             android:layout_width="0dp"
                             android:layout_height="45dp"
-                            android:layout_above="@+id/storeLoginButton"
+                            android:layout_above="@+id/storeLoginButton1"
                             android:layout_alignParentEnd="true"
                             android:layout_weight="1.5"
                             android:background="@null"
@@ -116,7 +116,7 @@
 
 
                 <Button
-                    android:id="@+id/storeLoginButton"
+                    android:id="@+id/storeLoginButton1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
