--- a/app/src/main/res/layout/activity_become_store.xml
+++ b/app/src/main/res/layout/activity_become_store.xml
@@ -49,7 +49,7 @@
                         android:weightSum="1">
 
                         <TextView
-                            android:id="@+id/E-mailTextView"
+                            android:id="@+id/Email"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignEnd="@+id/passwordCheckTextView"
@@ -68,7 +68,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignRight="@+id/passwordCheckTextView"
-                            android:layout_below="@+id/E-mailTextView"
+                            android:layout_below="@+id/Email"
                             android:layout_marginBottom="15dp"
                             android:layout_marginStart="0dp"
                             android:layout_marginTop="15dp"
