--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
                         android:layout_height="match_parent">
 
                         <TextView
-                            android:id="@+id/E-mailTextView"
+                            android:id="@+id/Email"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_alignStart="@+id/tableLayout"
