--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,7 +43,7 @@
                         android:layout_height="match_parent">
 
                         <TextView
-                            android:id="@+id/E-mailTextView"
+                            android:id="@+id/Email"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
