--- a/app/src/main/res/layout/activity_check_store_appeal.xml
+++ b/app/src/main/res/layout/activity_check_store_appeal.xml
@@ -62,7 +62,7 @@
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/contentTextView"
+                        android:id="@+id/memberContentTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/declarantTextView"
@@ -78,7 +78,7 @@
                         android:id="@+id/noteTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/contentTextView"
+                        android:layout_below="@+id/memberContentTextView"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
                         android:layout_marginTop="10dp"
