--- a/app/src/main/res/layout/alertdialog_report.xml
+++ b/app/src/main/res/layout/alertdialog_report.xml
@@ -26,7 +26,7 @@
         android:inputType="textPersonName" />
 
     <TextView
-        android:id="@+id/contentTextView"
+        android:id="@+id/memberContentTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/contentTextView"
+        android:layout_below="@+id/memberContentTextView"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="20dp"
         android:ems="10"
