--- a/app/src/main/res/layout/alertdialog_note.xml
+++ b/app/src/main/res/layout/alertdialog_note.xml
@@ -12,6 +12,5 @@
         android:gravity="top|left"
         android:inputType="textMultiLine|textShortMessage|textLongMessage|textPersonName"
         android:maxLines="5"
-        android:minLines="1"
-        android:textAlignment="viewStart" />
+        android:minLines="1" />
 </RelativeLayout>
