--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -19,6 +19,7 @@
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+    AIzaSyD4IQsWvgE2bNxPWyTYOkEMuNvDSpZRJEw
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyClrON7Hfis_Qvj_UWFIydcTN82OFpDNsY</string>
 </resources>
