--- a/app/src/main/res/layout/check_opponent.xml
+++ b/app/src/main/res/layout/check_opponent.xml
@@ -22,93 +22,88 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
+
+        <RelativeLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp">
+            android:paddingBottom="18dp"
+            android:paddingLeft="18dp"
+            android:paddingRight="18dp">
 
-            <RelativeLayout
-                android:id="@+id/content_frame"
+            <ImageView
+                android:id="@+id/storeImageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@android:color/holo_orange_dark" />
+
+            <TableLayout
+                android:id="@+id/tableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp">
+                android:layout_below="@+id/storeImageView">
 
-                <ImageView
-                    android:id="@+id/storeImageView"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:padding="10dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@android:color/holo_orange_dark" />
 
-                <TableLayout
-                    android:id="@+id/tableLayout"
+                <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/storeImageView">
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView37"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/storeImageView"
+                        android:layout_weight="2"
+                        android:gravity="center_vertical"
+                        android:text="高雄科大活動中心"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/font_size"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/storeImageView" />
+
+                </TableRow>
 
 
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                        <TextView
-                            android:id="@+id/textView37"
-                            android:layout_width="0dp"
-                            android:layout_height="40dp"
-                            android:layout_alignParentStart="true"
-                            android:layout_below="@+id/storeImageView"
-                            android:layout_weight="2"
-                            android:gravity="center_vertical"
-                            android:text="高雄科大活動中心"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/font_size"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/storeImageView" />
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="對手資訊"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/font_size"
+                        app:layout_constraintEnd_toStartOf="@+id/textView22"
+                        app:layout_constraintTop_toBottomOf="@+id/storeAddress" />
 
-                    </TableRow>
-
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/textView9"
-                            android:layout_width="0dp"
-                            android:layout_height="40dp"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical"
-                            android:text="對手資訊"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/font_size"
-                            app:layout_constraintEnd_toStartOf="@+id/textView22"
-                            app:layout_constraintTop_toBottomOf="@+id/storeAddress" />
-
-                        <TextView
-                            android:id="@+id/textView25"
-                            android:layout_width="0dp"
-                            android:layout_height="40dp"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical"
-                            android:text="你的資訊"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/font_size"
-                            app:layout_constraintStart_toEndOf="@+id/loginPrompt"
-                            app:layout_constraintTop_toBottomOf="@+id/storeAddress" />
-                    </TableRow>
-                </TableLayout>
+                    <TextView
+                        android:id="@+id/textView25"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="你的資訊"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/font_size"
+                        app:layout_constraintStart_toEndOf="@+id/loginPrompt"
+                        app:layout_constraintTop_toBottomOf="@+id/storeAddress" />
+                </TableRow>
+            </TableLayout>
 
 
-            </RelativeLayout>
-        </ScrollView>
+        </RelativeLayout>
 
 
     </android.support.constraint.ConstraintLayout>
