--- a/app/src/main/res/layout/storelistview_item.xml
+++ b/app/src/main/res/layout/storelistview_item.xml
@@ -75,6 +75,7 @@
             android:layout_width="75dp"
             android:layout_height="31dp"
             android:layout_marginEnd="15dp"
+            android:layout_marginTop="5dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/storePrice"
