--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                     android:layout_weight="1"
                     android:background="#00FFFFFF"
                     android:text="@string/location"
-                    android:textColor="@color/white" />
+                    android:textColor="#FFFFFF" />
 
                 <Button
                     android:id="@+id/sortButton"
